--- a/src/scss/general-style.scss
+++ b/src/scss/general-style.scss
@@ -9,6 +9,11 @@ body {
     background: #E7E8EB;
 }
 
+.title {
+    text-align: center;
+    margin-top: 10px;
+}
+
 .app {
     max-width: 1140px;
     padding: 0 10px;
