--- a/src/components/button/myButton.scss
+++ b/src/components/button/myButton.scss
@@ -1,8 +1,13 @@
 .myBtn {
-    padding: 5px 15px;
-    color: teal;
-    font-size: 14px;
-    background: transparent;
-    border: 1px solid teal;
     cursor: pointer;
+    background-color: #e5ebf1;
+    color: #246297;
+    border: 1px solid #e5ebf1;
+    border-radius: 6px;
+    font-size: 13px;
+    width: 150px;
+    height: 30px;
+        &:hover {
+            background-color: #cad6e3;
+    }
 }
