--- a/src/components/modal/myModal.scss
+++ b/src/components/modal/myModal.scss
@@ -12,9 +12,9 @@
     }
     &__content {
         position: absolute;
-        top: 50%;
+        top: 10%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%);
         padding: 15px;
         background: white;
         border-radius: 12px;
