--- a/src/components/Input/myInput.scss
+++ b/src/components/Input/myInput.scss
@@ -1,6 +1,9 @@
 .myInput {
-    width: 100%;
+    width: 200px;
+    height: 30px;
     padding: 5px 15px;
-    margin: 5px 0;
-    border: 1px solid teal;
+    border: 1px solid #e5ebf1;
+    background-color: #E7E8EB;
+    border-radius: 6px;
+    outline: none;
 }
