--- a/src/components/postItem/postItem.scss
+++ b/src/components/postItem/postItem.scss
@@ -13,9 +13,11 @@
     &__title {
         font-size: 14px;
         font-weight: 700;
+        width: 250px;
     }
     &__descr {
         font-size: 13px;
+        width: 650px;
     }
     &__none {
         display: none;
