--- a/src/components/button/myButton.scss
+++ b/src/components/button/myButton.scss
@@ -14,3 +14,11 @@
         width: 100%;
     }
 }
+
+@media (max-width: 992px) {
+    .myBtn {
+        &__post {
+            width: 100px;
+        }
+    }
+}
