--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -39,3 +39,42 @@
         font-weight: bold;
     }
 }
+
+@media (max-width: 1200px) {
+    .navbar {
+        &__container {
+            width: 960px;
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    .navbar {
+        &__container {
+            width: 720px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        &__container {
+            width: 540px;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .navbar {
+        height: 90px;
+        &__container {
+            width: 100%;
+            padding: 0 5px;
+            &-flex {
+                height: 90px;
+                flex-direction: column;
+                justify-content: space-around;
+            }
+        }
+    }
+}
